--- a/02.html
+++ b/02.html
@@ -25,7 +25,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url(parallax1.jpg);
+    background-image: url(head01.jpg);
     min-height: 100%;
 }
 
@@ -139,8 +139,7 @@ body, html {
     <div class="w3-col m4 w3-container">
       <!-- Add Google Maps -->
 
-      <img src="logo.jpg" style="width: 100%; height: 400px; position: relative; overflow: hidden;">  
-
+      <div id="googleMap" class="w3-round-large w3-greyscale" style="width:100%;height:400px;"></div>
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
@@ -152,13 +151,13 @@ body, html {
       <form action="/action_page.php" target="_blank">
         <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
           <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Name" required="" name="Name">
+            <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
           </div>
           <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Email" required="" name="Email">
+            <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
           </div>
         </div>
-        <input class="w3-input w3-border" type="text" placeholder="Message" required="" name="Message">
+        <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
         <button class="w3-button w3-black w3-right w3-section" type="submit">
           <i class="fa fa-paper-plane"></i> SEND MESSAGE
         </button>
@@ -166,6 +165,8 @@ body, html {
     </div>
   </div>
 </div>
+
+    
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
@@ -185,7 +186,7 @@ body, html {
 <script>
 function myMap()
 {
-  myCenter=new google.maps.LatLng(41.878114, -87.629798);
+  myCenter=new google.maps.LatLng(7.006272, 100.498598);
   var mapOptions= {
     center:myCenter,
     zoom:12, scrollwheel: false, draggable: false,
