--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-   <img src="logo.png" class="w3-bar-item w3-button">
+   <img src="logo.png" class="w3-bar-item ">
    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Diary <span class="w3-hide-small">Of</span> PSU</span>
   </div>
 </div>
@@ -110,7 +110,7 @@ body, html {
 </div>
 <div class="w3-row w3-center w3-white w3-padding-16">
   <div class="w3-quarter w3-section">
-    
+
   </div>
 
 </div>
@@ -146,9 +146,10 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">ABOUT ME</h3>
   <p class="w3-center"><em>I love photography</em></p>
-  <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p> ยินดีต้อนรับทุกคนเข้าสู่เรื่องราวและความทรงจำดีๆ ในเว็บไซต์บึนทึกไดอารี่ ที่รวบรวมเรื่องราวสุดประทับใจจากการใช้ชีวิตในรั้วมหาวิทยาลัยสงขลานครินทร์
+    ตลอดระยะเวลา 2 ปีที่มาผ่านมา ผู้เขียนได้ประสบพบเจอกับเรื่องราวต่างๆมากกมาย จึงอยากเล่าสู้กันฟังทั้งยังไว้เป็นข้อความคอยย้ำเตือนว่าครั้งหนึ่ง
+    เคยมีความสุขและภาคภูมิใจแค่ไหน ที่ได้ก้าวเข้ามาอยู่ในสถานที่ศึกษาแห่งนี้</P>
+  <P>ถึงอย่างไรก็ขอฝากไดอารี่เล่มนี้ให้ทุกคนติดตาม และสามารถแลกเปลี่ยนพูดคุยกันได้ตามที่อยู่ด่านล่าง</P>
 </div>
 
     <!-- Hide this text on small devices -->
@@ -169,7 +170,7 @@ body, html {
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +00 151515<br>
         <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: diary_of_psu@psu.com<br>
       </div>
-      
+
       <form action="/action_page.php" target="_blank">
         <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
           <div class="w3-half">
@@ -189,9 +190,9 @@ body, html {
 </div>
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  
+
 </footer>
- 
+
 <!-- Add Google Maps -->
 <script>
 function myMap()
