--- a/dir02.html
+++ b/dir02.html
@@ -1,7 +1,63 @@
-<html><head><style type="text/css">.gm-style .gm-style-mtc label,.gm-style .gm-style-mtc div{font-weight:400}
+<html>
+<head>
+  <link rel="shortcut icon" href="logohead.png" />
+  <style type="text/css">.gm-style .gm-style-mtc label,.gm-style .gm-style-mtc div{font-weight:400}
 </style><link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"><style type="text/css">.gm-style .gm-style-cc span,.gm-style .gm-style-cc a,.gm-style .gm-style-mtc div{font-size:10px}
 </style><style type="text/css">@media print {  .gm-style .gmnoprint, .gmnoprint {    display:none  }}@media screen {  .gm-style .gmnoscreen, .gmnoscreen {    display:none  }}</style><style type="text/css">.gm-style-pbc{transition:opacity ease-in-out;background-color:rgba(0,0,0,0.45);text-align:center}.gm-style-pbt{font-size:22px;color:white;font-family:Roboto,Arial,sans-serif;position:relative;margin:0;top:50%;-webkit-transform:translateY(-50%);-ms-transform:translateY(-50%);transform:translateY(-50%)}
-</style><title>W3.CSS Template</title>
+</style>
+<style>
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: white;
+}
+
+li {
+    float: left;
+}
+
+li a, .dropbtn {
+    display: inline-block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+}
+
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+</style>
+<title>Diary Of PSU</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -25,13 +81,13 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-2 {
-    background-image: url(head01.jpg);
+    background-image: url(dir01p03.jpg);
     min-height: 100%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-1 {
-    background-image: url(head02.jpg);
+    background-image: url(dir02p01.jpg);
     min-height: 400px;
 }
 
@@ -58,32 +114,26 @@ body, html {
       .gm-style img { max-width: none; }</style><script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/32/11/onion.js"></script><script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/32/11/controls.js"></script><script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/32/11/stats.js"></script></head><body>
 
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-card w3-animate-top w3-white" id="myNavbar">
-    <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
-      <i class="fa fa-bars"></i>
-   </a>
-    <a href="index.html"><img src="logo.png" class="w3-bar-item w3-button" width="70" height="70"></a>
-    <a href="index.html" class="w3-bar-item w3-button">HOME</a>
-    <a href="index.html#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-    <a href="index.html#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-      <i class="fa fa-search"></i>
-    </a>
-  </div>
-
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button">SEARCH</a>
-  </div>
+<div class="w3-top w3-card ">
+  <ul>
+  <li><a href="index.html"><img src="logo02.png" class="w3-bar-item "  ></a></li>
+  <li><b><a href="index.html" >HOME</a></b></li>
+  <li><b><a href="index.html#contact">CONTACT</a></b></li>
+  <li><b><a href="index.html#about">ABOUT</a></b></li>
+  <li class="dropdown">
+    <b><a href="javascript:void(0)" class="dropbtn">Diary</a></b>
+    <div class="dropdown-content">
+      <b><a href="dir01.html">อ่านหนังสือ</a></b>
+      <b><a href="dir02.html">ลานพระบิดา</a></b>
+      <b><a href="dir03.html">ความทรงจำของ Freshy</a></b>
+    </div>
+  </li>
+</ul>
 </div>
-
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MY <span class="w3-hide-small">WEBSITE</span> LOGO</span>
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Diary <span class="w3-hide-small">Of</span> PSU</span>
   </div>
 </div>
 
@@ -111,7 +161,7 @@ body, html {
 
 </div>
 <center>
-  <img src="dir01.jpg" class="w3-border w3-padding" >
+  <img src="dir02p02.jpg" class="w3-border w3-padding" width="55%" >
 </center>
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">ABOUT ME</h3>
