--- a/index.html
+++ b/index.html
@@ -2,8 +2,63 @@
 <head>
   <link rel="shortcut icon" href="logohead.png" />
   <style type="text/css">.gm-style .gm-style-mtc label,.gm-style .gm-style-mtc div{font-weight:400}
-</style><link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"><style type="text/css">.gm-style .gm-style-cc span,.gm-style .gm-style-cc a,.gm-style .gm-style-mtc div{font-size:10px}
-</style><style type="text/css">@media print {  .gm-style .gmnoprint, .gmnoprint {    display:none  }}@media screen {  .gm-style .gmnoscreen, .gmnoscreen {    display:none  }}</style><style type="text/css">.gm-style-pbc{transition:opacity ease-in-out;background-color:rgba(0,0,0,0.45);text-align:center}.gm-style-pbt{font-size:22px;color:white;font-family:Roboto,Arial,sans-serif;position:relative;margin:0;top:50%;-webkit-transform:translateY(-50%);-ms-transform:translateY(-50%);transform:translateY(-50%)}
+</style>
+<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+<style type="text/css">.gm-style .gm-style-cc span,.gm-style .gm-style-cc a,.gm-style .gm-style-mtc div{font-size:10px}
+</style>
+<style type="text/css">@media print {  .gm-style .gmnoprint, .gmnoprint {    display:none  }}@media screen {  .gm-style .gmnoscreen, .gmnoscreen {    display:none  }}</style><style type="text/css">.gm-style-pbc{transition:opacity ease-in-out;background-color:rgba(0,0,0,0.45);text-align:center}.gm-style-pbt{font-size:22px;color:white;font-family:Roboto,Arial,sans-serif;position:relative;margin:0;top:50%;-webkit-transform:translateY(-50%);-ms-transform:translateY(-50%);transform:translateY(-50%)}
+</style>
+<style>
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: white;
+}
+
+li {
+    float: left;
+}
+
+li a, .dropbtn {
+    display: inline-block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+}
+
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 </style>
 <title>Diary Of PSU</title>
 <meta charset="UTF-8">
@@ -29,7 +84,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url(head01.jpg);
+    background-image: url(head02.jpg);
     min-height: 100%;
 }
 
@@ -62,34 +117,32 @@ body, html {
       .gm-style img { max-width: none; }</style><script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/32/11/onion.js"></script><script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/32/11/controls.js"></script><script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/32/11/stats.js"></script></head><body>
 
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-card w3-animate-top w3-white" id="myNavbar">
-    <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
-      <i class="fa fa-bars"></i>
-    </a>
-    <a href="index.html" class="w3-bar-item w3-button">HOME</a>
-    <a href="index.html#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-      <i class="fa fa-search"></i>
-    </a>
-  </div>
 
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button">SEARCH</a>
-  </div>
+<div class="w3-top w3-card ">
+  <ul>
+  <li><a href="index.html"><img src="logo02.png" class="w3-bar-item "  ></a></li>
+  <li><b><a href="index.html" >HOME</a></b></li>
+  <li><b><a href="index.html#contact">CONTACT</a></b></li>
+  <li><b><a href="index.html#about">ABOUT</a></b></li>
+  <li class="dropdown">
+    <b><a href="javascript:void(0)" class="dropbtn">Diary</a></b>
+    <div class="dropdown-content">
+      <b><a href="dir01.html">อ่านหนังสือ</a></b>
+      <b><a href="dir02.html">ลานพระบิดา</a></b>
+      <b><a href="dir03.html">ความทรงจำของ Freshy</a></b>
+    </div>
+  </li>
+</ul>
+  
 </div>
 
 <!-- First Parallax Image with Logo Text -->
-<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+<div class="bgimg-1 w3-display-container w3-opacity-min" id="home"></div>
   <div class="w3-display-middle" style="white-space:nowrap;">
    <img src="logo.png" class="w3-bar-item ">
    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Diary <span class="w3-hide-small">Of</span> PSU</span>
   </div>
-</div>
+
 
 <!-- Container (About Section) -->
 
@@ -116,21 +169,21 @@ body, html {
 </div>
 <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="dir01.html"><img src="dir01.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity" ></a>
+      <a href="dir01.html"><img src="dir01p04.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity" ></a>
       <div class="w3-container w3-white">
         <a href="dir01.html"><b>Lorem Ipsum</b></a>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="dir02.html"><img src="dir02.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity" ></a>
+      <a href="dir02.html"><img src="dir02p04.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity" ></a>
       <div class="w3-container w3-white">
         <a href="dir02.html"><b>Lorem Ipsum</b></a>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <a href="dir03.html"><img src="dir03.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity" ></a>
+      <a href="dir03.html"><img src="dir03p01.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity" ></a>
       <div class="w3-container w3-white">
         <a href="dir03.html"><b>Lorem Ipsum</b></a>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
@@ -145,11 +198,10 @@ body, html {
 </div>
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">ABOUT ME</h3>
-  <p class="w3-center"><em>I love photography</em></p>
-  <p> ยินดีต้อนรับทุกคนเข้าสู่เรื่องราวและความทรงจำดีๆ ในเว็บไซต์บึนทึกไดอารี่ ที่รวบรวมเรื่องราวสุดประทับใจจากการใช้ชีวิตในรั้วมหาวิทยาลัยสงขลานครินทร์
+  <p> ยินดีต้อนรับทุกคนเข้าสู่เรื่องราวและความทรงจำดีๆ ในเว็บไซต์บันทึกไดอารี่ ที่รวบรวมเรื่องราวสุดประทับใจจากการใช้ชีวิตในรั้วมหาวิทยาลัยสงขลานครินทร์
     ตลอดระยะเวลา 2 ปีที่มาผ่านมา ผู้เขียนได้ประสบพบเจอกับเรื่องราวต่างๆมากกมาย จึงอยากเล่าสู้กันฟังทั้งยังไว้เป็นข้อความคอยย้ำเตือนว่าครั้งหนึ่ง
     เคยมีความสุขและภาคภูมิใจแค่ไหน ที่ได้ก้าวเข้ามาอยู่ในสถานที่ศึกษาแห่งนี้</P>
-  <P>ถึงอย่างไรก็ขอฝากไดอารี่เล่มนี้ให้ทุกคนติดตาม และสามารถแลกเปลี่ยนพูดคุยกันได้ตามที่อยู่ด่านล่าง</P>
+  <P><center><b>"ถึงอย่างไรก็ขอฝากไดอารี่เล่มนี้ให้ทุกคนติดตาม และสามารถแลกเปลี่ยนพูดคุยกันได้ตามที่อยู่ด่านล่างนะคะ"</b></center></P>
 </div>
 
     <!-- Hide this text on small devices -->
