--- a/dir01.html
+++ b/dir01.html
@@ -166,11 +166,9 @@ body, html {
   <img src="dir01p01.jpg" class="w3-border w3-padding" >
 </center>
 <div class="w3-content w3-container w3-padding-64" id="about">
-  <h3 class="w3-center">ABOUT ME</h3>
-  <p class="w3-center"><em>I love photography</em></p>
-  <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <h3 class="w3-center">ลานอ่านหนังสือ</h3>
+  <p class="w3-center"><em></em></p>
+    <p>เชื่อได้เลยว่า เมื่อถึงเทศกาลสอบที่ไร เหล่าบรรดานักศึกษาต่างหลั่งไหลเข้ามาจองโต๊ะ ตั้งกลุ่ม เพื่ออ่านหนังสือกัน ซึ่งเราเองก็เป็นหนึ่งในนั่นที่ทำแบบนี้  มันทำให้การสอบในหลายๆวิชาประสบความสำเร็จตามที่ตั้งใจไว้เลย เพราะเราไม่ใช่แค่อ่านหนังสือเพียงอย่างเดียว แต่มันแฝงไปด้วยความสนุก การได้นั่งแลกเปลี่ยนข้อมูลและช่วยกันค้นหาคำตอบกับบางเรื่องที่เราไม่เข้าใจมันได้เป็นอย่างดี ช่วงเวลาแห่งการสอบเป็นช่วงเวลาแห่งมิตรภาพจริงๆ </p>
 </div>
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
