--- a/dir03.html
+++ b/dir03.html
@@ -164,11 +164,9 @@ body, html {
   <img src="dir03p02.jpg" class="w3-border w3-padding" width="55%">
 </center>
 <div class="w3-content w3-container w3-padding-64" id="about">
-  <h3 class="w3-center">ABOUT ME</h3>
-  <p class="w3-center"><em>I love photography</em></p>
-  <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <h3 class="w3-center">ความทรงจำของ Freshy</h3>
+  <p class="w3-center"><em></em></p>
+  <p>นี่คือห้องแรกที่ฉันรู้จัก หลังจากที่ฉันก้าวเข้ามาอยู่ 'คณะวิทยาการจัดการ' ฉันเข้ามาอยู่ในห้องแห่งนี้ โดยที่ไม่รู้จักใครเลย แต่ทุกคนต่างดูเป็นมิตรกันและทำกินจกรรมร่วมกันราวกับว่าสนิทกันมาตั้งแต่สมัยเด็กๆ มันก็ดีนะกับความรู้สึกแบบนี้ มันทำให้ฉันไม่รู้สึกแปลกตากับสถานที่ใหม่ และไม่รู้สึกว่าทุกคนคือเพื่อนใหม่เช่นเดียวกัน  </p>
 </div>
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
