--- a/index.html
+++ b/index.html
@@ -171,22 +171,22 @@ body, html {
     <div class="w3-third w3-container w3-margin-bottom">
       <a href="dir01.html"><img src="dir01p04.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity" ></a>
       <div class="w3-container w3-white">
-        <a href="dir01.html"><b>Lorem Ipsum</b></a>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <a href="dir01.html"><b>อ่านหนังสือ</b></a>
+        <P> เชื่อได้เลยว่า เมื่อถึงเทศกาลสอบที่ไร เหล่าบรรดานักศึกษา.....</P>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
       <a href="dir02.html"><img src="dir02p04.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity" ></a>
       <div class="w3-container w3-white">
-        <a href="dir02.html"><b>Lorem Ipsum</b></a>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <a href="dir02.html"><b>ลานพระบิดา</b></a>
+        <p>ครั้งแรกที่ฉันก้าวเข้ามาในรั้วมหาวิทยาลัยสงขลานครินทร์แห่งนี้.....</p>
       </div>
     </div>
     <div class="w3-third w3-container">
       <a href="dir03.html"><img src="dir03p01.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity" ></a>
       <div class="w3-container w3-white">
-        <a href="dir03.html"><b>Lorem Ipsum</b></a>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <a href="dir03.html"><b>ความทรงจำของ Freshy</b></a>
+        <p>นี่คือห้องแรกที่ฉันรู้จัก หลังจากที่ฉันก้าวเข้ามาอยู่ 'คณะวิทยาการจัดการ'.....</p>
       </div>
     </div>
   </div>
@@ -198,7 +198,7 @@ body, html {
 </div>
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">ABOUT ME</h3>
-  <p> ยินดีต้อนรับทุกคนเข้าสู่เรื่องราวและความทรงจำดีๆ ในเว็บไซต์บันทึกไดอารี่ ที่รวบรวมเรื่องราวสุดประทับใจจากการใช้ชีวิตในรั้วมหาวิทยาลัยสงขลานครินทร์
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ยินดีต้อนรับทุกคนเข้าสู่เรื่องราวและความทรงจำดีๆ ในเว็บไซต์บันทึกไดอารี่ ที่รวบรวมเรื่องราวสุดประทับใจจากการใช้ชีวิตในรั้วมหาวิทยาลัยสงขลานครินทร์
     ตลอดระยะเวลา 2 ปีที่มาผ่านมา ผู้เขียนได้ประสบพบเจอกับเรื่องราวต่างๆมากกมาย จึงอยากเล่าสู้กันฟังทั้งยังไว้เป็นข้อความคอยย้ำเตือนว่าครั้งหนึ่ง
     เคยมีความสุขและภาคภูมิใจแค่ไหน ที่ได้ก้าวเข้ามาอยู่ในสถานที่ศึกษาแห่งนี้</P>
   <P><center><b>"ถึงอย่างไรก็ขอฝากไดอารี่เล่มนี้ให้ทุกคนติดตาม และสามารถแลกเปลี่ยนพูดคุยกันได้ตามที่อยู่ด่านล่างนะคะ"</b></center></P>
