--- a/dir02.html
+++ b/dir02.html
@@ -164,11 +164,9 @@ body, html {
   <img src="dir02p02.jpg" class="w3-border w3-padding" width="55%" >
 </center>
 <div class="w3-content w3-container w3-padding-64" id="about">
-  <h3 class="w3-center">ABOUT ME</h3>
-  <p class="w3-center"><em>I love photography</em></p>
-  <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <h3 class="w3-center">ลานพระบิดา</h3>
+  <p class="w3-center"><em></em></p>
+  <p>ครั้งแรกที่ฉันก้าวเข้ามาในรั้วมหาวิทยาลัยสงขลานครินทร์แห่งนี้ ที่นี้เป็นที่ที่ฉันรักและเคารพ ฉันมักจะมาขอพรเมื่อใกล้ถึงวันสอบ ฉันรู้สึกเหมือนจะโชคดีและทำข้อสอบได้</p>
 </div>
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
